--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -71,12 +71,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "21625526-3fae-4c55-bab5-f91940070681",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Open', 'Open', 'Senior', 'Open', 'Open', 'Senior']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def categorize_members(members):\n",
+    "    return [\n",
+    "        \"Senior\" if age >= 55 and handicap > 7 else \"Open\"\n",
+    "        for age, handicap in members\n",
+    "    ]\n",
+    "\n",
+    "# Example usage\n",
+    "input_data = [[18, 20], [45, 2], [61, 12], [37, 6], [21, 21], [78, 9]]\n",
+    "output_data = categorize_members(input_data)\n",
+    "print(output_data)\n"
    ]
   },
   {
@@ -95,12 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "53061dce-7aa3-4476-8b56-71413c5e135c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def sum_of_multiples(number):\n",
+    "    if number < 0:\n",
+    "        return 0\n",
+    "    \n",
+    "    return sum(n for n in range(number) if n % 3 == 0 or n % 5 == 0)\n",
+    "\n",
+    "# Example usage\n",
+    "input_number = 10\n",
+    "output = sum_of_multiples(input_number)\n",
+    "print(output)  # Output should be 23\n"
    ]
   },
   {
@@ -127,12 +165,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a8cb1579-7065-4fc0-bd53-f91c2ad1dad9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1]\n",
+      "[8, 6, 7, 5, 3, 0, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def digits_list(n):\n",
+    "    # Convert the integer to a string\n",
+    "    n_str = str(n)\n",
+    "    # Convert each character back to an integer and collect them in a list\n",
+    "    return [int(digit) for digit in n_str]\n",
+    "\n",
+    "# Example usage\n",
+    "print(digits_list(123))      # Output: [1, 2, 3]\n",
+    "print(digits_list(1))        # Output: [1]\n",
+    "print(digits_list(8675309))  # Output: [8, 6, 7, 5, 3, 0, 9]\n"
    ]
   },
   {
@@ -155,12 +214,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "86ebe759-76d8-4012-8590-c48a473a6099",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1, -2, -3, -4, -5]\n",
+      "[-1, 2, -3, 4, -5]\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def invert(lst):\n",
+    "    # Use a list comprehension to apply the additive inverse to each element\n",
+    "    return [-x for x in lst]\n",
+    "\n",
+    "# Example usage\n",
+    "print(invert([1, 2, 3, 4, 5]))  # Output: [-1, -2, -3, -4, -5]\n",
+    "print(invert([1, -2, 3, -4, 5])) # Output: [-1, 2, -3, 4, -5]\n",
+    "print(invert([]))                # Output: []\n"
    ]
   },
   {
@@ -193,12 +271,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6711881b-450a-44cb-a3d0-367b2c6a4464",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 6: 36, 7: 49, 8: 64, 9: 81, 10: 100, 11: 121, 12: 144, 13: 169, 14: 196, 15: 225}\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "# Create a dictionary with keys from 1 to 15 and values as squares of the keys\n",
+    "squares_dict = {key: key**2 for key in range(1, 16)}\n",
+    "\n",
+    "# Print the dictionary\n",
+    "print(squares_dict)\n"
    ]
   },
   {
@@ -220,12 +312,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a1d55cea-96c3-4853-8220-17c0904a8816",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 4)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def generate_pairs(list1, list2):\n",
+    "    # Generate all possible pairs using a list comprehension\n",
+    "    pairs = [(x, y) for x in list1 for y in list2]\n",
+    "    return pairs\n",
+    "\n",
+    "# Example usage\n",
+    "list1 = [1, 2]\n",
+    "list2 = [3, 4]\n",
+    "result = generate_pairs(list1, list2)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a74026d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def generate_pairs(list1, list2):\n",
+    "    # Generate all possible pairs using itertools.product\n",
+    "    pairs = list(itertools.product(list1, list2))\n",
+    "    return pairs\n",
+    "\n",
+    "# Example usage\n",
+    "list1 = [1, 2]\n",
+    "list2 = [3, 4]\n",
+    "result = generate_pairs(list1, list2)\n",
+    "print(result)\n"
    ]
   },
   {
@@ -246,12 +386,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0175239c-87fa-4ba0-8776-d62567256db7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 1), ('a', 2), ('b', 3), ('b', 4)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def generate_key_value_pairs(d):\n",
+    "    # Generate all possible key-value pairs using a list comprehension\n",
+    "    pairs = [(key, value) for key, values in d.items() for value in values]\n",
+    "    return pairs\n",
+    "\n",
+    "# Example usage\n",
+    "input_dict = {\"a\": [1, 2], \"b\": [3, 4]}\n",
+    "result = generate_key_value_pairs(input_dict)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d98956c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 1), ('a', 2), ('b', 3), ('b', 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_key_value_pairs(d):\n",
+    "    pairs = []\n",
+    "    for key, values in d.items():\n",
+    "        for value in values:\n",
+    "            pairs.append((key, value))\n",
+    "    return pairs\n",
+    "\n",
+    "# Example usage\n",
+    "input_dict = {\"a\": [1, 2], \"b\": [3, 4]}\n",
+    "result = generate_key_value_pairs(input_dict)\n",
+    "print(result)\n"
    ]
   },
   {
@@ -281,12 +467,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "248918d0-f082-40a8-9d5c-c7b4ffd2bfca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 4), (5, 7), (5, 8), (6, 7), (6, 8)]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def generate_pairs(tuple_list):\n",
+    "    # Use a list comprehension to generate all possible pairs\n",
+    "    pairs = [(x, y) for (list1, list2) in tuple_list for x in list1 for y in list2]\n",
+    "    return pairs\n",
+    "\n",
+    "# Example usage\n",
+    "input_tuples = [([1, 2], [3, 4]), ([5, 6], [7, 8])]\n",
+    "output = generate_pairs(input_tuples)\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a8d7651a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (2, 3), (2, 4), (5, 7), (5, 8), (6, 7), (6, 8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_pairs(tuple_list):\n",
+    "    pairs = []\n",
+    "    for list1, list2 in tuple_list:\n",
+    "        for x in list1:\n",
+    "            for y in list2:\n",
+    "                pairs.append((x, y))\n",
+    "    return pairs\n",
+    "\n",
+    "# Example usage\n",
+    "input_tuples = [([1, 2], [3, 4]), ([5, 6], [7, 8])]\n",
+    "output = generate_pairs(input_tuples)\n",
+    "print(output)\n"
    ]
   },
   {
@@ -308,12 +541,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c57d9e77-6859-45dd-a2e6-2c1898f1baa2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{('a', 'c'), ('b', 'c'), ('a', 'd'), ('b', 'd')}\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code goes here"
+    "# your code goes here\n",
+    "\n",
+    "def generate_character_pairs(strings):\n",
+    "    # Ensure we have exactly two strings\n",
+    "    if len(strings) != 2:\n",
+    "        raise ValueError(\"Input should contain exactly two strings.\")\n",
+    "    \n",
+    "    # Extract the two strings from the list\n",
+    "    str1, str2 = strings\n",
+    "    \n",
+    "    # Use set comprehension to generate all possible pairs\n",
+    "    pairs = {(c1, c2) for c1 in str1 for c2 in str2}\n",
+    "    \n",
+    "    return pairs\n",
+    "\n",
+    "# Example usage\n",
+    "input_strings = [\"ab\", \"cd\"]\n",
+    "output = generate_character_pairs(input_strings)\n",
+    "print(output)\n"
    ]
   }
  ],
@@ -333,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
